# NFM

./: .gitignore  BLOCKCHAIN_RESET_QUICK_REF.md  BLOCKCHAIN_RESET_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GATE_REVIEW_STATUS.md  IMPLEMENTATION_CHECKLIST.md  LANGKAH3_SUMMARY.md  LANGKAH4_SUMMARY.md  LICENSE  LOAD_TEST_BASELINE.md  PR_DESCRIPTION.md  README.md  RESET_FEATURE_COMPLETE.txt  Reset-NFM.ps1  WALLET_DEVELOPER_REFERENCE.md  WALLET_ENHANCEMENT_SUMMARY.md  WALLET_UI_LAYOUT.md  blueprint.txt  report.md  test_alias_transfer.ps1  test_nlc_atomicity.ps1  test_nuke.ps1  test_staking.ps1  test_valid_nlc.ps1
core/blockchain/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
core/blockchain/.cargo/: config.toml
core/blockchain/src/: admin.rs  api.rs  auction.rs  block.rs  config.rs  consensus.rs  contract.rs  coupon.rs  governance.rs  governance_api.rs  governance_storage.rs  identity.rs  item.rs  load_test.rs  main.rs  mission.rs  network.rs  reward.rs  security.rs  storage.rs  transfer.rs  wallet.rs
core/blockchain/web/: dashboard.html  founders.html
docs/: BACKEND_ARCHITECTURE.md  BLOCKCHAIN_RESET_DEV.md  GOVERNANCE_DESIGN.md  INTEGRATION_ROADMAP.md  PARALLEL_DEVELOPMENT.md  PHASE6_TESTING_HANDOFF.md  ai_model_deployment.md  app_suite_definition.md  dev_debug_tools.md  folder_structure.md  gamification_and_quests.md  implementation_roadmap.md  marketplace_and_auctions.md  native_brain_and_learning.md  nfm_brain_curriculum.md  nfm_id_titles.md  reward_simulation.md  risk_and_mitigation.md  security_audit.md  sovereign_chain_design.md  (+1 more)
(+77 files in other folders)
