[package]
name = "nfm-core-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tiny_http = "0.12"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sled = "0.34"
